objects/PKBSiteSetup__c.object
<CustomObject><fields>
        <fullName>CacheMaxAge__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount of time (in seconds) the content distribution network (CDN) server caches the pages of your PKB site. A value of zero (0) disables caching. CDN caching is automatically enabled on sites. We recommend setting this to 300 seconds (5 minutes).</inlineHelpText>
        <label>Cache Max Age</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Category1Description__c</fullName>
        <label>Category 1 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Category2Description__c</fullName>
        <label>Category 2 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Category3Description__c</fullName>
        <label>Category 3 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>CategoryGroupName__c</fullName>
        <inlineHelpText>The name of the category group. the Root Category must be a category of this group.</inlineHelpText>
        <label>Category Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Portal_Login_Link__c</fullName>
        <inlineHelpText>Copy and Paste the Customer Portal login URL.  It should look like:
https://na1.salesforce.com/secur/login_portal.jsp?orgId=00D30000000in6j&amp;portalId=06030000000SrY7</inlineHelpText>
        <label>Customer Portal Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Portal_Login__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer Portal Login</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Customer_Portal_Sign_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal Sign Up</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HomeAdText__c</fullName>
        <inlineHelpText>The description of the advertising in the home page.</inlineHelpText>
        <label>Home Advertising Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>HomeAdTitle__c</fullName>
        <inlineHelpText>The title of the advertising in the home page.</inlineHelpText>
        <label>Home Advertising Title</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Knowledge_Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knowledge Categories</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Knowledge_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knowledge Search</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Most_Popular_Articles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Popular Articles</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PKBSiteName__c</fullName>
        <label>Associated PKB Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Partner_Portal_Login_URL__c</fullName>
        <inlineHelpText>Copy and Paste the Customer Portal login URL. It should look like:
https://na1.salesforce.com/secur/login_portal.jsp?orgId=00D30000000in6j&amp;portalId=06030000000SrY7</inlineHelpText>
        <label>Partner Portal Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Partner_Portal_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Portal Login</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Partner_Portal_Sign_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Portal Sign Up</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Portal_Branding_Source__c</fullName>
        <label>Portal Branding Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Portal_Branding__c</fullName>
        <formula>if(
 ISPICKVAL(Portal_Branding_Source__c ,"Customer Portal") , TRIM(RIGHT( Customer_Portal_Login_Link__c , 15)) ,
   if(
    ISPICKVAL(Portal_Branding_Source__c ,"Partner Portal") , TRIM(RIGHT(  Partner_Portal_Login_URL__c  , 15)) , "none"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Branding</label>
        <type>Text</type>
    </fields><fields>
        <fullName>RootCategoryName__c</fullName>
        <label>Root category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Site_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Login</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Tabs__c</fullName>
        <label>Tabs</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers (Tab to Site)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners (Tab to Site)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community (Ideas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>W2L__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-to-Lead</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Web_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-to-Case</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>SDO SiteSetup</label><nameField>
        <label>PKB Site Setup Name</label>
        <type>Text</type>
    </nameField><pluralLabel>SDO Site Setup</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CategoryGroupName__c</columns>
        <columns>RootCategoryName__c</columns>
        <columns>Tabs__c</columns>
        <columns>HomeAdTitle__c</columns>
        <columns>HomeAdText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>